[package]
name = "ruspiro-mmu"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url
description = """
Functions to use and configure the MemoryManagementUnit (MMU) of the Raspberry Pi
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-mmu/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-mmu/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "mmu", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
links = "ruspiro_mmu"

exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-mmio-register", branch = "release" }
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-mmio-register" }

[lib]

[dependencies]
ruspiro-arch-aarch64 = "0.1"

[features]
ruspiro_pi3 = [ ]

[patch.crates-io]
ruspiro-arch-aarch64 = { git = "https://github.com/RusPiRo/ruspiro-arch-aarch64.git", branch = "master" }
