[package]
name = "ruspiro-mmu"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.1" # remember to update html_root_url
description = """
Functions to use and configure the MemoryManagementUnit (MMU) of the Raspberry Pi
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-mmu/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-mmu/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "mmu", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
links = "ruspiro_mmu"
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-arch-aarch64 = "~0.1.4"

[features]

[patch.crates-io]
ruspiro-arch-aarch64 = { git = "https://github.com/RusPiRo/ruspiro-arch-aarch64.git", branch = "development" }
